fixed collapse so that it's always collapsed on both ComapanyOpenPosition and userSettings

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -234,7 +234,7 @@ display: block;
 }
 
 .text-block {
-width: 90%;
+width: 75%;
     margin: auto;
 }
 
